--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "concurrently": "^6.2.1",
     "convict": "^5.2.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
