--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --exit",
     "lint": "./node_modules/eslint/bin/eslint.js . --ext .js --fix",
     "start": "node server/server.js",
     "server": "nodemon server/server.js"
@@ -13,6 +13,8 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "cloudinary": "^1.26.3",
     "concurrently": "^6.2.1",
     "convict": "^5.2.1",
@@ -27,9 +29,12 @@
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.1",
+    "mockgoose": "^8.0.4",
     "moment": "^2.29.1",
     "mongoose": "^6.0.0",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
