Add data seeder

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chai-http": "^4.3.0",
     "cloudinary": "^1.26.3",
     "concurrently": "^6.2.1",
+    "convert-excel-to-json": "^1.7.0",
     "convict": "^5.2.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mailgun-js": "^0.22.0",
